--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-select": "^5.4.0",
+    "react-select-async-paginate": "^0.6.2",
     "sequelize": "^6.21.4"
   },
   "devDependencies": {
